--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "tax-calculator",
+  "name": "covid19",
+  "homepage": "http://shuoor.github.io/covid19",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,6 +8,10 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.8",
     "bootstrap": "^4.4.1",
+    "echarts": "^4.7.0",
+    "echarts-for-react": "^2.0.15-beta.1",
+    "highcharts": "^8.0.4",
+    "highcharts-react-official": "^3.0.0",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
@@ -16,14 +21,19 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "0.9.5",
+    "react-sparklines": "^1.7.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
