--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.8",
+    "@highcharts/map-collection": "^1.1.3",
     "bootstrap": "^4.4.1",
     "echarts": "^4.7.0",
     "echarts-for-react": "^2.0.15-beta.1",
+    "firebase-tools": "^7.16.1",
     "highcharts": "^8.0.4",
     "highcharts-react-official": "^3.0.0",
     "node-sass": "^4.13.1",
@@ -29,11 +31,11 @@
     "gh-pages": "^2.2.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   }
 }
