--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "homepage": "http://shuoor.github.io/covid19",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "10.15.1"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
